[BUGFIX] Further work to address invisible dropdowns in fixed matrix headers; improvements to matrices with no rows

--- a/app/assets/stylesheets/partials/_components_dropdowns.scss
+++ b/app/assets/stylesheets/partials/_components_dropdowns.scss
@@ -112,6 +112,12 @@ a.user-nav--toggle {
 
 .dropdown--options {
   @extend %dropdown-options;
+  &.open {
+    display: block;
+  }
+  &.stuck {
+    position: fixed;
+  }
   .dropdown-header & {
     top: 2.5em;
   }
